<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/addNoteTextView"
        style="@style/TextStyle.H3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_70"
        android:text="@string/addNote"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tFieldTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_36"
        android:layout_marginEnd="@dimen/dp_16"
        android:hint="@string/title"
        app:counterEnabled="true"
        app:counterMaxLength="@integer/count_40"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addNoteTextView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/title_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tFieldMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_36"
        android:layout_marginEnd="@dimen/dp_16"
        android:hint="@string/msg"
        app:counterEnabled="true"
        app:counterMaxLength="@integer/material_motion_duration_medium_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tFieldTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/message_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="@integer/count_line_5" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_add_msg"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_100"
        android:background="@drawable/shape_button"
        android:gravity="center_horizontal"
        android:paddingStart="@dimen/dp_70"
        android:paddingEnd="@dimen/dp_70"
        android:text="@string/aDd"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>