<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bubbles">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_2"
        android:layout_marginTop="@dimen/dp_70"
        android:layout_marginEnd="@dimen/dp_2"
        android:background="@drawable/blur_background_log"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dp_2"
        android:paddingRight="@dimen/dp_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/TextStyle.H3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/dp_20"
            android:text="@string/Log" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tFieldEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_6"
            android:hint="@string/email"
            app:counterEnabled="true"
            app:counterMaxLength="@integer/count_chars_small"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minWidth="@dimen/dp_300" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tFieldPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_6"
            android:hint="@string/pass"
            app:counterEnabled="true"
            app:counterMaxLength="@integer/count_chars_small"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minWidth="@dimen/dp_300" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/button_log_in"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_button"
        android:paddingStart="@dimen/dp_60"
        android:paddingEnd="@dimen/dp_60"
        android:text="@string/Log"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@id/log_text_view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/log_text_view2"
        style="@style/TextStyle.P"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_marginBottom="@dimen/dp_100"
        android:text="@string/return_sign"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>